Fixed some layout issues.

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
   position: fixed;
   justify-content: center;
   align-items: center;
-  height: 7vh;
+  height: 60px;
   width: 100%;
   z-index: 9999;
   font-size: 2.5vh;
@@ -45,10 +45,10 @@
 
 .nav--list {
   position: fixed;
-  width: 5wh;
+  width: 5px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   list-style: none;
   font-size: auto;
   padding: 1%;
@@ -201,7 +201,7 @@ a#download {
 }
 
 .footer {
-  position: fixed;
+  position: relative;
   left: 0;
   right: 0;
   bottom: 0;
@@ -223,7 +223,7 @@ a#download {
   text-align: center;
   height: auto;
   width: 100%;  
-  margin: 10px;
+  margin: 5px;
   font-family: 'Quicksand', sans-serif;
   font-size: 20px;
    font-weight: bolder;
@@ -249,29 +249,29 @@ a#download {
 .text-block {
   text-align: center;
   height: auto;
-  width: 60%;
+  width: 65%;
   background-color: aliceblue;
   font-family: 'Quicksand', sans-serif;
-  border-radius: 5%;
-  border: 1px solid yellowgreen;
+  border-radius: 3%;
+  border: 2% solid yellowgreen;
   padding: 5%;
-  margin: 150px auto 5%;
+  margin: 80px auto 5%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-size: 20px;
+  font-size: 16px;
 }
 
 .credits {
-  height: 150px;
-  width: 35%;
+  height: auto;
+  width: 75%;
   padding: 2%;
-  max-width: 50%;
-  margin: 180px auto;
+  max-width: 75%;
+  margin: 80px auto;
   background-color: aliceblue;
   border: 2px solid yellowgreen;
   text-align: center;
-  font-size: 18px;
+  font-size: 20px;
 }
 
 
@@ -373,9 +373,9 @@ a#download {
   padding-top: 10px;
   padding: 6%;
   max-width: 500px;
-  margin: 160px auto;
+  margin: 80px auto;
   background-color: aliceblue;
-  border: 2px solid yellowgreen;
+  border: 3px solid yellowgreen;
   text-align: center;
   font-size: 18px;
 }
@@ -384,7 +384,7 @@ canvas {
   max-width: 100%;
   max-height: auto;
   width: auto;
-  margin-top: 100px;
+  margin-top: 10px;
 }
 
 #instructions {
@@ -400,7 +400,7 @@ canvas {
   max-width: 100%;
   padding: 1%;
   transition: background-color 0.3s ease;
-  margin-top: 1px;
+  margin-top: -40px;
   margin-bottom: 10px;
   display: flex;
   justify-content: center;
@@ -450,7 +450,7 @@ canvas {
   object-fit: contain;
    max-width: 900px;
    width: auto;
-   gap: 5px;
+   gap: 10px;
    margin: 5px auto auto;
 }
 .grid-container {
@@ -466,7 +466,7 @@ canvas {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
     object-fit: contain;
-    gap: 5px;
+    gap: 10px;
   }
 }
 
